--- a/index.css
+++ b/index.css
@@ -30,6 +30,21 @@
     background-color:green;
 }
 
+.search-box
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+input
+{
+    outline:0;
+    border:1px solid black;
+    border-radius: 15px;
+    padding:5px;
+    margin-top: 10px;
+}
 .container
 {
     position:absolute;
@@ -45,6 +60,11 @@
     position: relative;
     border:1px solid black;
     height:25%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align:center;
 }
 .middle
 {
@@ -58,7 +78,7 @@
 {
     position:relative;
     border:1px solid black;
-    /* middle divided into 3 sections through grid and thus width 100% each */
+    /* middle divided into 3 sections through grid and thus width 100% each*/
     width:100%;
     height:100%;
 }
